WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114048
[EFL] --minimal build fails with error: ‘ViewModeInvalid’ is not a member of ‘WebCore::Page’
https://bugs.webkit.org/show_bug.cgi?id=114048
Summary
[EFL] --minimal build fails with error: ‘ViewModeInvalid’ is not a member of ...
Ed Bartosh
Reported
2013-04-05 11:38:09 PDT
./Tools/Scripts/build-webkit --efl --cmakeargs="-DSHARED_CORE=ON" --minimal fails with this error: /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/AssertMatchingEnums.cpp:78:98: error: ‘ViewModeInvalid’ is not a member of ‘WebCore::Page’ /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/AssertMatchingEnums.cpp:79:99: error: ‘ViewModeWindowed’ is not a member of ‘WebCore::Page’ /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/AssertMatchingEnums.cpp:80:99: error: ‘ViewModeFloating’ is not a member of ‘WebCore::Page’ /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/AssertMatchingEnums.cpp:81:101: error: ‘ViewModeFullscreen’ is not a member of ‘WebCore::Page’ /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/AssertMatchingEnums.cpp:82:100: error: ‘ViewModeMaximized’ is not a member of ‘WebCore::Page’ /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/AssertMatchingEnums.cpp:83:100: error: ‘ViewModeMinimized’ is not a member of ‘WebCore::Page’ make[2]: *** [Source/WebKit/CMakeFiles/ewebkit.dir/efl/WebCoreSupport/AssertMatchingEnums.cpp.o] Error 1
Attachments
Patch
(4.58 KB, patch)
2013-04-05 12:29 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.37 KB, patch)
2013-04-07 13:27 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.75 KB, patch)
2013-04-10 14:00 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.87 KB, patch)
2013-04-11 14:08 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.85 KB, patch)
2013-04-11 14:27 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2013-04-12 10:39 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2013-04-13 04:07 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Ed Bartosh
Comment 1
2013-04-05 12:29:47 PDT
Created
attachment 196666
[details]
Patch
Ed Bartosh
Comment 2
2013-04-07 13:27:26 PDT
Created
attachment 196810
[details]
Patch Rebased. Please, review.
Ed Bartosh
Comment 3
2013-04-09 14:32:27 PDT
Please, review!
Gyuyoung Kim
Comment 4
2013-04-09 19:36:43 PDT
Comment on
attachment 196810
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196810&action=review
LGTM otherwise.
> Source/WebKit/efl/ewk/ewk_view.cpp:4258 > +#if ENABLE(VIEW_MODE_CSS_MEDIA)
Move macro to inside function in public APIs case.
> Source/WebKit/efl/ewk/ewk_view.cpp:-4262 > -
Do not touch code unrelated to this patch.
Gyuyoung Kim
Comment 5
2013-04-09 19:38:20 PDT
Comment on
attachment 196810
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196810&action=review
> Source/WebKit/efl/ChangeLog:3 > + [EFL] --minimal build fails with error: âViewModeInvalidâ is not a member of âWebCore::Pageâ
One more thing. Characters are broken in bug title.
Ed Bartosh
Comment 6
2013-04-10 14:00:34 PDT
Created
attachment 197403
[details]
Patch
Gyuyoung Kim
Comment 7
2013-04-10 20:13:40 PDT
Comment on
attachment 197403
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197403&action=review
If you get r+ from reviewer, you don't need to request r? again. You just add reviewer's name to ChangeLog, and then just request cq?
> Source/WebKit/efl/ewk/ewk_view.cpp:4264 > +#if ENABLE(VIEW_MODE_CSS_MEDIA)
To be consistent in existing functions, I prefer to wrap up all function implementations with macro.
http://trac.webkit.org/browser/trunk/Source/WebKit/efl/ewk/ewk_view.cpp#L4430
> Source/WebKit/efl/ewk/ewk_view.cpp:4274 > +#if ENABLE(VIEW_MODE_CSS_MEDIA)
ditto
Ed Bartosh
Comment 8
2013-04-11 14:08:20 PDT
Created
attachment 197670
[details]
Patch
Ed Bartosh
Comment 9
2013-04-11 14:27:38 PDT
Created
attachment 197672
[details]
Patch
Gyuyoung Kim
Comment 10
2013-04-11 15:25:19 PDT
Comment on
attachment 197672
[details]
Patch Reviewer only can set r+. Once you get r+ from reviewer, just request cq. Please do not touch r field.
Gyuyoung Kim
Comment 11
2013-04-11 15:26:21 PDT
Comment on
attachment 197672
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197672&action=review
> Source/WebKit/efl/ChangeLog:8 > + Wrapped view-mode media related code into #if ENABLE(VIEW_MODE_CSS_MEDIA)
Add a new line.
Ed Bartosh
Comment 12
2013-04-12 10:39:46 PDT
Created
attachment 197867
[details]
Patch
Gyuyoung Kim
Comment 13
2013-04-12 23:39:26 PDT
Comment on
attachment 197867
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197867&action=review
> Source/WebKit/efl/ewk/ewk_view.cpp:4271 > + return true;
It would be return false when this API is turned off.
Ed Bartosh
Comment 14
2013-04-13 04:07:37 PDT
Created
attachment 197932
[details]
Patch
WebKit Commit Bot
Comment 15
2013-04-13 05:03:21 PDT
Comment on
attachment 197932
[details]
Patch Clearing flags on attachment: 197932 Committed
r148355
: <
http://trac.webkit.org/changeset/148355
>
WebKit Commit Bot
Comment 16
2013-04-13 05:03:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug