[EFL] --minimal build fails with error: 'ViewModeInvalid' is not a member of 'WebCore::Page' https://bugs.webkit.org/show_bug.cgi?id=114048

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-13
Reviewed by Gyuyoung Kim.

Source/WebKit/efl:

Wrapped view-mode media related code into #if ENABLE(VIEW_MODE_CSS_MEDIA)

* WebCoreSupport/AssertMatchingEnums.cpp:
* ewk/ewk_view.cpp:
(ewk_view_mode_set):

Tools:

Wrapped view media related code in #if ENABLE(VIEW_MODE_CSS_MEDIA)

* DumpRenderTree/efl/TestRunnerEfl.cpp:
(TestRunner::setViewModeMediaFeature):

Canonical link: https://commits.webkit.org/132939@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148355 268f45cc-cd09-0410-ab3c-d52691b4dbfc